Bug 55732 - Greek page number fields - case inverted
Summary: Greek page number fields - case inverted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.6.2 release
Hardware: Other All
: medium normal
Assignee: lkakol
URL:
Whiteboard: target:3.7.0 target:3.6.4
Keywords: needsDevEval
Depends on:
Blocks:
 
Reported: 2012-10-07 16:06 UTC by Mirosław Zalewski
Modified: 2015-12-18 10:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mirosław Zalewski 2012-10-07 16:06:08 UTC
In "Fields" window, Page number fields for Greek letters case is inverted.

Steps to reproduce:

0. Open LO Writer
1. Open "Fields" window (Ctrl+F2 || Insert → Fields → Other...)
2. In "Document" tab select "Page"
3. In "Format" column select uppercase Greek letters ("A, B, ... (gr)")
4. Press "Insert" 

In document, lower case Greek letter will be inserted (α for first page). If you select lowercase Greek letters in Format column, uppercase letters will be inserted in document.

I could reproduce it on:
- 3.5.6, Arch Linux (i686)
- 3.6.1, Debian Linux (amd64)
- 3.6.3-dev from 7.10.2012, Windows 7 (i686)

Perhaps this is EasyHack?

Best regards
Mirosław Zalewski
Comment 1 leighman 2012-10-07 20:47:47 UTC
Confirmed in master 5c02bb0 (7 Oct) on Ubuntu 12.04
Comment 2 Joel Madero 2012-10-15 22:51:31 UTC
Editing title, no need to have writer since component is already writer
Comment 3 lkakol 2012-10-21 20:07:22 UTC
Confirmed on Ubuntu, looking into a fix
Comment 4 Not Assigned 2012-10-24 12:13:27 UTC
Lester committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e89c99a8ce264173a9d9cbb6df09d7811d6b34cc

fdo#55732 display upper case greek letters in page numbering option



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-10-24 12:28:55 UTC
Lester committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=607d0ceb066a30a490426a7e1aa60ad83fdb4ec5&g=libreoffice-3-6

fdo#55732 display upper case greek letters in page numbering option


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-18 10:18:50 UTC
Migrating Whiteboard tags to Keywords: (ProposedEasyHack -> needsDevEval)
[NinjaEdit]