fdo#55732 display upper case greek letters in page numbering option

\n\nAll of the code for the constant defining greek upper case page numbering is correct, but the UI dialog that represents that constant displayed lower case greek letters, and vice versa. So, the dialog should display the proper characters.

Change-Id: Ib8d0a41928796fbed5f36162c35d6e1db2463e07